--- a/css/chamados.css
+++ b/css/chamados.css
@@ -9,6 +9,7 @@
 body{
 	font-family: 'Roboto', sans-serif;
 	background-color: #ece4f063;
+	
 }
 
 
@@ -16,41 +17,32 @@ li, ul {
 	text-decoration: none;
 	list-style: none;
 	border-radius: 20px;
-	
-	
 }
 
-.sb1{
-	border: 30px;
-    border-radius: 20px;
+/*tabela*/
+th {
+	background-color: #660099;
+	color: white;
+	padding: 8px;
+}
+td {
+	text-align: left;
+	padding: 8px;
 }
 
+tr:hover {background-color: #66009949;}
 
 #tblListar{
 	width:100%;
-	border:solid #660099 1px;
+	border:solid #66009952 1px;
 	text-align:left;
 	background-color: #ffffff;
-	
-	
-
-	
+	border-collapse: collapse;
+  width: 100%;
 }
 
-#tblListar tbody tr{
-	border:solid #d9c4e2 1px;
-	height:30px;
-	
-}
 
-#tblListar thead{
-	background-color: #660099;
-	color: #fff;
-	border: 20px #660099;
-	border-radius: 5px;
-	
-}
-
+/*Botao*/
 #btnSalvar {
 	color: #fff;
 	padding: 5px 10px;
@@ -69,18 +61,10 @@ li, ul {
 	color: #660099;
 }
 
-.footer {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-	position: absolute;
-    justify-content: center;
-	background-color: #b887be27;
-	color: #660099;
-	max-height: 8vh;
-	border-radius: 5px;
-	font-size: 14px;
-	padding-top: 2.5vh;
-
-}
+/*versao*/
+.versao{
+	color: #ffffffa9;
+	bottom: 10px;
+	position: fixed;
+	padding-left: 10px;
+}	
